[project]
name = "tip-trust"
version = "0.1.0"
description = "\"Bootstrapped AI evaluator for EGX trading tips\""
authors = [
    {name = "\"Rania\""}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

